err/django-angular-scaffold.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/angular_scaffold'...
Listing './lib/python3.5/site-packages/angular_scaffold/management'...
Listing './lib/python3.5/site-packages/angular_scaffold/management/commands'...
Listing './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers'...
Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_add_route.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_add_route.py", line 35
    print "Using Controller: %s" % os.path.join(directory, 'assets', 'controllers', controller + "Controller.js")
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_controller.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_controller.py", line 21
    print "Controller Already Exists: %s" % controller
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_csrf.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_csrf.py", line 14
    print "Creating: " + filename
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_debugger.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_debugger.py", line 9
    print "Creating: " + logger_file
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_limiter.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_limiter.py", line 37
    print "Creating: " + filename
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_routes.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_routes.py", line 20
    print "Creating: " + filename
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_view.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/helpers/_generate_view.py", line 42
    print "View Template Already Exists: %s" % namespace
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/angular_scaffold/management/commands/startservice.py'...
***   File "./lib/python3.5/site-packages/angular_scaffold/management/commands/startservice.py", line 18
    print 'Successfully initialized service'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_angular_scaffold-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
